<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SplashActivity">

    <ImageView
        android:src="@drawable/keyboard_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/image_logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/findingboard"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="16dp"
        android:text="@string/find_your_favourite_keyboard_end_enjoy"
        android:textAlignment="center" />

</LinearLayout>