<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_500">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/header_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/app_name"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cover_image"
                tools:src="@drawable/gambar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/title_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:text="Judul Keyboard" />

            <TextView
                android:id="@+id/desc_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:lineSpacingMultiplier="1"
                tools:text="@string/description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Spesifikasi"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:lineSpacingMultiplier="1"
                android:fontFamily="@font/poppins_bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <TableRow
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/product_number" />

                    <TextView
                        android:id="@+id/product_number"
                        style="@style/TextSpec.Value"
                        android:text="@string/dkyotp2019" />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Structure" />

                    <TextView
                        android:id="@+id/structure"
                        style="@style/TextSpec.Value"
                        android:text="Mechanical structure" />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Trigger Switch" />

                    <TextView
                        android:id="@+id/trigger_switch"
                        style="@style/TextSpec.Value"
                        android:text="Cherry MX mechanical switches" />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Connection Interface" />

                    <TextView
                        android:id="@+id/connection_interface"
                        style="@style/TextSpec.Value"
                        android:text="USB 3.0" />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Keycap Material" />

                    <TextView
                        android:id="@+id/keycap_material"
                        style="@style/TextSpec.Value"
                        android:text="PBT" />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Output Number" />

                    <TextView
                        android:id="@+id/output_number"
                        style="@style/TextSpec.Value"
                        android:text="USB N-Key Rollover" />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="Dimensions" />

                    <TextView
                        android:id="@+id/dimensions"
                        style="@style/TextSpec.Value"
                        android:text="440 x 135 x 40 mm" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>